# PIP-OS

./: .gitignore  .gitlab-ci.yml  AppImageBuilder.yml  BootSequence.qml  CMakeLists.txt  Main.qml  MainLayout.qml  NavButton.qml  PageData.qml  PageInv.qml  PageItem.qml  PageMap.qml  PageRadio.qml  PageStat.qml  README.md  Style.qml  SubMenu.qml  TabInventory.qml  TabRadio.qml  TabSpecial.qml  TabStatus.qml  bootscreen.cpp  bootscreen.h  constants.cpp  constants.h  dweller.cpp  dweller.h  ic2input.cpp  inputeventhandler.cpp  inputeventhandler.h  inventory.cpp  inventory.h  inventoryitem.cpp  inventoryitem.h  inventorymodel.cpp  inventorymodel.h  main.cpp  main.qml  pcf8574.cpp  pcf8574.h
debian/: control  gbp.conf  pip-os.user.service  postinst  qmldeps.overrides  rules
drivers/hid/: README.md  control-daemon.c
i2c/: README.md  pcf8574.cpp  pcf8574.h  qi2c.cpp  qi2c.h
inc/public/PipOS/: app.h  bootscreen.h  buttons.h  dataprovider.h  dweller.h  gpio.h  hardwareinput.h  hid.h  holotape.h  inputeventhandler.h  inventory.h  inventoryitem.h  keyboardinput.h  settings.h
qml/: BootSequence.qml
qml/Components/: ItemStat.qml
qml/JSONListModel/: JSONListModel.qml  README.md
qml/Layout/: MainLayout.qml  MainNavigation.qml  MainNavigationTab.qml  MainState.qml  SubMenu.qml
qml/Pages/: PageData.qml  PageItem.qml  PageMap.qml  PageRadio.qml  PageStat.qml
qml/Pages/ITEM/: ITEM.qml
qml/Pages/STAT/: Status.qml
qml/Programs/: AtomicCommand.qml
qml/Tabs/: TabCollections.qml  TabEffects.qml  TabInventory.qml  TabQuests.qml  TabRadio.qml  TabSpecial.qml  TabStatus.qml
settings/: DwellerSettings.qml  InterfaceSettings.qml
src/: app.cpp  bootscreen.cpp  buttons.cpp  dataprovider.cpp  dataprovider.h  dweller.cpp  dweller.h  gpio.cpp  hardwareinput.cpp  hid.cpp  holotape.cpp  inputeventhandler.cpp  inventory.cpp  inventoryitem.cpp  keyboardinput.cpp  settings.cpp  settings.h
